Fix z-index issue with resizing icon for blocks

--- a/style/style.css
+++ b/style/style.css
@@ -37,6 +37,10 @@ table {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.block {
+	z-index: 0;
+}
+
 #savedialoginput {
 	margin-top: 1em;
 }
